fixed spacing bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 html,
 body,
 :root {
-  height: 100h
+  height: 100%;
 }
  
 @layer base {
